[gd_scene load_steps=10 format=3 uid="uid://c7wwss8wgjl76"]

[ext_resource type="Texture2D" uid="uid://bdn6ca7dsjn1u" path="res://sprites/rock.png" id="1_ksygd"]
[ext_resource type="Script" path="res://objects/large_rock.gd" id="1_po8xs"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6vhbg"]
size = Vector2(112, 112)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_33f4h"]
size = Vector2(128, 120)

[sub_resource type="CircleShape2D" id="CircleShape2D_h81w6"]
radius = 88.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0crvf"]
size = Vector2(128, 120)

[sub_resource type="Animation" id="Animation_lwpnb"]
resource_name = "break_stone"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vlyes"]
_data = {
"break_stone": SubResource("Animation_lwpnb")
}

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_2ori1"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(20, 20, 1)
spread = 180.0
initial_velocity_min = 78.65
initial_velocity_max = 78.65
angular_velocity_min = 57.1
angular_velocity_max = 75.65
radial_velocity_max = 21.6
gravity = Vector3(0, 192.2, 0)
linear_accel_max = 30.45
scale_min = 5.55
scale_max = 11.75
color = Color(0.941176, 0.537255, 0.0470588, 1)
hue_variation_min = 0.99
hue_variation_max = 1.0

[node name="large rock" type="Node2D"]
script = ExtResource("1_po8xs")

[node name="StaticBody2D" type="StaticBody2D" parent="." groups=["buildingObstructer"]]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource("RectangleShape2D_6vhbg")

[node name="Rock" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(0, -8)
scale = Vector2(8, 8)
texture = ExtResource("1_ksygd")
hframes = 3

[node name="remover_checker" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="remover_checker"]
position = Vector2(0, -4)
shape = SubResource("RectangleShape2D_33f4h")
debug_color = Color(0.980392, 0, 1, 0.223529)

[node name="interaction_radius" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="interaction_radius"]
shape = SubResource("CircleShape2D_h81w6")

[node name="mouse_radius" type="Area2D" parent="."]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="mouse_radius"]
z_index = 1
position = Vector2(0, -4)
shape = SubResource("RectangleShape2D_0crvf")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_vlyes")
}

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
emitting = false
amount = 70
process_material = SubResource("ParticleProcessMaterial_2ori1")
lifetime = 0.5
one_shot = true
explosiveness = 1.0

[connection signal="area_entered" from="remover_checker" to="." method="_on_remover_checker_area_entered"]
[connection signal="body_entered" from="interaction_radius" to="." method="_on_interaction_radius_body_entered"]
[connection signal="body_exited" from="interaction_radius" to="." method="_on_interaction_radius_body_exited"]
[connection signal="mouse_entered" from="mouse_radius" to="." method="_on_mouse_radius_mouse_entered"]
[connection signal="mouse_exited" from="mouse_radius" to="." method="_on_mouse_radius_mouse_exited"]
